--- a/.gitignore
+++ b/.gitignore
@@ -296,3 +296,6 @@ __pycache__/
 # Cake - Uncomment if you are using it
 # tools/**
 # !tools/packages.config
+/console.txt
+/.gitigore_old
+/servermine.cpp
